@@ -180,6 +180,10 @@
 # database uses UTC instead of local timezone (1 = enabled, 0 = disabled)
 ;UseUTC 0
 
+# database maintenance (1 = enabled, 0 = disabled)
+;VacuumOnStartup 1
+;VacuumOnHUPSignal 1
+
 
 # vnstati
 ##
